--- a/interfaces/_condition_.condition.html
+++ b/interfaces/_condition_.condition.html
@@ -111,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/Condition.ts#L16">Condition.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/Condition.ts#L16">Condition.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">operator<span class="tsd-signature-symbol">:</span> <a href="../modules/_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/Condition.ts#L24">Condition.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/Condition.ts#L24">Condition.ts:24</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -156,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/Condition.ts#L31">Condition.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/Condition.ts#L31">Condition.ts:31</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -179,7 +179,7 @@
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
