--- a/interfaces/_updateexpressionaction_.updateexpressionlistsetatindex.html
+++ b/interfaces/_updateexpressionaction_.updateexpressionlistsetatindex.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"list_set_at_index"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L179">UpdateExpressionAction.ts:179</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L179">UpdateExpressionAction.ts:179</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -117,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L188">UpdateExpressionAction.ts:188</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L188">UpdateExpressionAction.ts:188</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L198">UpdateExpressionAction.ts:198</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L198">UpdateExpressionAction.ts:198</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L193">UpdateExpressionAction.ts:193</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L193">UpdateExpressionAction.ts:193</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -176,7 +176,7 @@
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
