--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -74,7 +74,7 @@
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_requestbuilder_.html#addcondition" class="tsd-kind-icon">add<wbr>Condition</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_requestbuilder_.html#addfilter" class="tsd-kind-icon">add<wbr>Filter</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-has-type-parameter"><a href="_requestbuilder_.html#addprojection" class="tsd-kind-icon">add<wbr>Projection</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#addtransactwriteitemsinput" class="tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#addtransactwriteitems" class="tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchdeleteinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Delete<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchgetinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Get<wbr>Input</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_requestbuilder_.html#buildbatchputinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input</a></li>
@@ -106,7 +106,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L831">requestBuilder.ts:831</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -155,7 +155,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L848">requestBuilder.ts:848</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -206,7 +206,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L790">requestBuilder.ts:790</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -247,16 +247,16 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
-					<a name="addtransactwriteitemsinput" class="tsd-anchor"></a>
-					<h3>add<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</h3>
+					<a name="addtransactwriteitems" class="tsd-anchor"></a>
+					<h3>add<wbr>Transact<wbr>Write<wbr>Items</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items<wbr>Input<span class="tsd-signature-symbol">(</span>request<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">TransactWriteItemsInput</span>, <span class="tsd-signature-symbol">...</span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items<span class="tsd-signature-symbol">(</span>request<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">TransactWriteItemsInput</span>, <span class="tsd-signature-symbol">...</span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">UpdateItemInput</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">DeleteItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L572">requestBuilder.ts:572</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -293,7 +293,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L487">requestBuilder.ts:487</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -328,7 +328,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L527">requestBuilder.ts:527</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -363,7 +363,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L462">requestBuilder.ts:462</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -398,7 +398,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L603">requestBuilder.ts:603</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -444,7 +444,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L332">requestBuilder.ts:332</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -482,7 +482,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L738">requestBuilder.ts:738</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -512,7 +512,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L92">requestBuilder.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -553,7 +553,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L115">requestBuilder.ts:115</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -591,7 +591,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -645,7 +645,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L29">requestBuilder.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -681,7 +681,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L438">requestBuilder.ts:438</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -726,7 +726,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L561">requestBuilder.ts:561</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -757,7 +757,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L181">requestBuilder.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -804,7 +804,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/requestBuilder.ts#L757">requestBuilder.ts:757</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -837,7 +837,7 @@
 						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
@@ -883,7 +883,7 @@
 						<a href="_requestbuilder_.html#addprojection" class="tsd-kind-icon">add<wbr>Projection</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
-						<a href="_requestbuilder_.html#addtransactwriteitemsinput" class="tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items<wbr>Input</a>
+						<a href="_requestbuilder_.html#addtransactwriteitems" class="tsd-kind-icon">add<wbr>Transact<wbr>Write<wbr>Items</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_requestbuilder_.html#buildbatchdeleteinput" class="tsd-kind-icon">build<wbr>Batch<wbr>Delete<wbr>Input</a>
