--- a/modules/_responseunwrapper_.html
+++ b/modules/_responseunwrapper_.html
@@ -93,7 +93,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/responseUnwrapper.ts#L61">responseUnwrapper.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/responseUnwrapper.ts#L61">responseUnwrapper.ts:61</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -126,7 +126,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/responseUnwrapper.ts#L48">responseUnwrapper.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/responseUnwrapper.ts#L48">responseUnwrapper.ts:48</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -158,7 +158,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/responseUnwrapper.ts#L90">responseUnwrapper.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/responseUnwrapper.ts#L90">responseUnwrapper.ts:90</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -190,7 +190,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/responseUnwrapper.ts#L8">responseUnwrapper.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/responseUnwrapper.ts#L8">responseUnwrapper.ts:8</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -219,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/responseUnwrapper.ts#L77">responseUnwrapper.ts:77</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/responseUnwrapper.ts#L77">responseUnwrapper.ts:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -253,7 +253,7 @@
 						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
