--- a/interfaces/_scopeddynameh_.scopeddynameh.html
+++ b/interfaces/_scopeddynameh_.scopeddynameh.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;FluentDynameh&quot; | Dynameh</title>
+	<title>ScopedDynameh | Dynameh</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,30 +54,97 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_fluentdynameh_.html">&quot;FluentDynameh&quot;</a>
+					<a href="../modules/_scopeddynameh_.html">&quot;ScopedDynameh&quot;</a>
+				</li>
+				<li>
+					<a href="_scopeddynameh_.scopeddynameh.html">ScopedDynameh</a>
 				</li>
 			</ul>
-			<h1>External module &quot;FluentDynameh&quot;</h1>
+			<h1>Interface ScopedDynameh</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>An instance of Dynameh scoped to a particular TableSchema.  All calls that require
+						a TableSchema have that parameter already filled in.</p>
+					</div>
+				</div>
+			</section>
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">ScopedDynameh</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Classes</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentdynameh.html" class="tsd-kind-icon">Fluent<wbr>Dynameh</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a></li>
-								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter"><a href="../classes/_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#batchhelper" class="tsd-kind-icon">batch<wbr>Helper</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#concurrenthelper" class="tsd-kind-icon">concurrent<wbr>Helper</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#requestbuilder" class="tsd-kind-icon">request<wbr>Builder</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_scopeddynameh_.scopeddynameh.html#responseunwrapper" class="tsd-kind-icon">response<wbr>Unwrapper</a></li>
 							</ul>
 						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="batchhelper" class="tsd-anchor"></a>
+					<h3>batch<wbr>Helper</h3>
+					<div class="tsd-signature tsd-kind-icon">batch<wbr>Helper<span class="tsd-signature-symbol">:</span> <a href="../modules/_batchhelper_.html" class="tsd-signature-type">&quot;batchHelper&quot;</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/ScopedDynameh.ts#L16">ScopedDynameh.ts:16</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="concurrenthelper" class="tsd-anchor"></a>
+					<h3>concurrent<wbr>Helper</h3>
+					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Helper<span class="tsd-signature-symbol">:</span> <a href="../modules/_concurrenthelper_.html" class="tsd-signature-type">&quot;concurrentHelper&quot;</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/ScopedDynameh.ts#L18">ScopedDynameh.ts:18</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="requestbuilder" class="tsd-anchor"></a>
+					<h3>request<wbr>Builder</h3>
+					<div class="tsd-signature tsd-kind-icon">request<wbr>Builder<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/ScopedDynameh.ts#L20">ScopedDynameh.ts:20</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+						</ul>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="responseunwrapper" class="tsd-anchor"></a>
+					<h3>response<wbr>Unwrapper</h3>
+					<div class="tsd-signature tsd-kind-icon">response<wbr>Unwrapper<span class="tsd-signature-symbol">:</span> <a href="../modules/_responseunwrapper_.html" class="tsd-signature-type">&quot;responseUnwrapper&quot;</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/ScopedDynameh.ts#L42">ScopedDynameh.ts:42</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -88,57 +155,66 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_condition_.html">"<wbr>Condition"</a>
+						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="../modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="../modules/_batchhelper_.html">"batch<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="../modules/_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="../modules/_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_index_.html">"index"</a>
+						<a href="../modules/_index_.html">"index"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="../modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="../modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="../modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_validation_.html">"validation"</a>
+						<a href="../modules/_validation_.html">"validation"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="../classes/_fluentdynameh_.fluentdynameh.html" class="tsd-kind-icon">Fluent<wbr>Dynameh</a>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_scopeddynameh_.scopeddynameh.html#batchhelper" class="tsd-kind-icon">batch<wbr>Helper</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_scopeddynameh_.scopeddynameh.html#concurrenthelper" class="tsd-kind-icon">concurrent<wbr>Helper</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_scopeddynameh_.scopeddynameh.html#requestbuilder" class="tsd-kind-icon">request<wbr>Builder</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_scopeddynameh_.scopeddynameh.html#responseunwrapper" class="tsd-kind-icon">response<wbr>Unwrapper</a>
+							</li>
+						</ul>
 					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="../classes/_fluentdynameh_.fluentrequestbuilder.html" class="tsd-kind-icon">Fluent<wbr>Request<wbr>Builder</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsbuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Builder</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-has-type-parameter">
-						<a href="../classes/_fluentdynameh_.fluenttransactwriteitemsmultitablebuilder.html" class="tsd-kind-icon">Fluent<wbr>Transact<wbr>Write<wbr>Items<wbr>Multi<wbr>Table<wbr>Builder</a>
-					</li>
+				</ul>
+				<ul class="after-current">
 				</ul>
 			</nav>
 		</div>
