--- a/interfaces/_updateexpressionaction_.updateexpressionnumberadd.html
+++ b/interfaces/_updateexpressionaction_.updateexpressionnumberadd.html
@@ -105,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"number_add"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L94">UpdateExpressionAction.ts:94</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L94">UpdateExpressionAction.ts:94</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -115,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L103">UpdateExpressionAction.ts:103</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L103">UpdateExpressionAction.ts:103</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -138,7 +138,7 @@
 					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L108">UpdateExpressionAction.ts:108</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L108">UpdateExpressionAction.ts:108</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -159,7 +159,7 @@
 						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
