--- a/modules/_condition_.html
+++ b/modules/_condition_.html
@@ -88,7 +88,7 @@
 						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
