--- a/modules/_scopeddynameh_.html
+++ b/modules/_scopeddynameh_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>UpdateExpressionNumberSubtract | Dynameh</title>
+	<title>&quot;ScopedDynameh&quot; | Dynameh</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,97 +54,26 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/_updateexpressionaction_.html">&quot;UpdateExpressionAction&quot;</a>
-				</li>
-				<li>
-					<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html">UpdateExpressionNumberSubtract</a>
+					<a href="_scopeddynameh_.html">&quot;ScopedDynameh&quot;</a>
 				</li>
 			</ul>
-			<h1>Interface UpdateExpressionNumberSubtract</h1>
+			<h1>External module &quot;ScopedDynameh&quot;</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-					<div class="lead">
-						<p>Subtract from an existing numeric attribute.</p>
-					</div>
-				</div>
-			</section>
-			<section class="tsd-panel tsd-hierarchy">
-				<h3>Hierarchy</h3>
-				<ul class="tsd-hierarchy">
-					<li>
-						<span class="target">UpdateExpressionNumberSubtract</span>
-					</li>
-				</ul>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Properties</h3>
+							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#action" class="tsd-kind-icon">action</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#attribute" class="tsd-kind-icon">attribute</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#value" class="tsd-kind-icon">value</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module"><a href="../interfaces/_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a></li>
 							</ul>
 						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="action" class="tsd-anchor"></a>
-					<h3>action</h3>
-					<div class="tsd-signature tsd-kind-icon">action<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"number_subtract"</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L115">UpdateExpressionAction.ts:115</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="attribute" class="tsd-anchor"></a>
-					<h3>attribute</h3>
-					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L124">UpdateExpressionAction.ts:124</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>The attribute name to update.  Nested attributes
-								can be accessed using dot notation; for example <code>a.b.c</code>.  Attribute
-								names with literal dots should escape them with a backslash; for
-							example <code>a\.b\.c</code>.</p>
-						</div>
-						<dl class="tsd-comment-tags">
-							<dt>see</dt>
-							<dd><p><a href="https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
-							</dd>
-						</dl>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="value" class="tsd-anchor"></a>
-					<h3>value</h3>
-					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L129">UpdateExpressionAction.ts:129</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>The number to subtract.</p>
-						</div>
 					</div>
 				</section>
 			</section>
@@ -156,95 +85,47 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_condition_.html">"<wbr>Condition"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
+						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_batchhelper_.html">"batch<wbr>Helper"</a>
+						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
+						<a href="_updateexpressionaction_.html">"<wbr>Update<wbr>Expression<wbr>Action"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
+						<a href="_batchhelper_.html">"batch<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_index_.html">"index"</a>
+						<a href="_concurrenthelper_.html">"concurrent<wbr>Helper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_requestbuilder_.html">"request<wbr>Builder"</a>
+						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+						<a href="_index_.html">"index"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_validation_.html">"validation"</a>
+						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_.html">"validation"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Append</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Prepend</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Remove<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>List<wbr>Set<wbr>AtIndex</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Add</a>
-					</li>
-				</ul>
-				<ul class="current">
-					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Number<wbr>Subtract</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#action" class="tsd-kind-icon">action</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#attribute" class="tsd-kind-icon">attribute</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="_updateexpressionaction_.updateexpressionnumbersubtract.html#value" class="tsd-kind-icon">value</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionput.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Put<wbr>IfNot<wbr>Exists</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionremove.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Remove</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Add</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module">
-						<a href="_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-kind-icon">Update<wbr>Expression<wbr>Set<wbr>Delete</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
-						<a href="../modules/_updateexpressionaction_.html#updateexpressionaction" class="tsd-kind-icon">Update<wbr>Expression<wbr>Action</a>
+						<a href="../interfaces/_scopeddynameh_.scopeddynameh.html" class="tsd-kind-icon">Scoped<wbr>Dynameh</a>
 					</li>
 				</ul>
 			</nav>
