--- a/modules/_updateexpressionaction_.html
+++ b/modules/_updateexpressionaction_.html
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">Update<wbr>Expression<wbr>Action<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_updateexpressionaction_.updateexpressionput.html" class="tsd-signature-type">UpdateExpressionPut</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionputifnotexists.html" class="tsd-signature-type">UpdateExpressionPutIfNotExists</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionremove.html" class="tsd-signature-type">UpdateExpressionRemove</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionnumberadd.html" class="tsd-signature-type">UpdateExpressionNumberAdd</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionnumbersubtract.html" class="tsd-signature-type">UpdateExpressionNumberSubtract</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistappend.html" class="tsd-signature-type">UpdateExpressionListAppend</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistprepend.html" class="tsd-signature-type">UpdateExpressionListPrepend</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistsetatindex.html" class="tsd-signature-type">UpdateExpressionListSetAtIndex</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionlistremoveatindex.html" class="tsd-signature-type">UpdateExpressionListRemoveAtIndex</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionsetadd.html" class="tsd-signature-type">UpdateExpressionSetAdd</a><span class="tsd-signature-symbol"> | </span><a href="../interfaces/_updateexpressionaction_.updateexpressionsetdelete.html" class="tsd-signature-type">UpdateExpressionSetDelete</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/811d13f/src/UpdateExpressionAction.ts#L20">UpdateExpressionAction.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/ef51d49/src/UpdateExpressionAction.ts#L20">UpdateExpressionAction.ts:20</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -136,7 +136,7 @@
 						<a href="_condition_.html">"<wbr>Condition"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_fluentdynameh_.html">"<wbr>Fluent<wbr>Dynameh"</a>
+						<a href="_scopeddynameh_.html">"<wbr>Scoped<wbr>Dynameh"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_tableschema_.html">"<wbr>Table<wbr>Schema"</a>
